--- a/_includes/head.html
+++ b/_includes/head.html
@@ -21,6 +21,13 @@
   gtag('config', 'UA-149434135-1');
 </script>
 
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({
+google_ad_client: "ca-pub-7698742701612322",
+enable_page_level_ads: true
+});
+</script>
 
 
   <!-- Created with Jekyll Now - http://github.com/barryclark/jekyll-now -->
