--- a/_includes/head.html
+++ b/_includes/head.html
@@ -29,6 +29,7 @@ enable_page_level_ads: true
 });
 </script>
 
+<script data-ad-client="ca-pub-7698742701612322" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 
   <!-- Created with Jekyll Now - http://github.com/barryclark/jekyll-now -->
 </head>
